; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_rpc_linux.c_khrn_callback.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/common/linux/extr_khrn_client_rpc_linux.c_khrn_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@khrn_queue = common dso_local global i32 0, align 4
@bulk_event = common dso_local global i32 0, align 4
@VCHIQ_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @khrn_callback(i32 %0, i32* %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %17 [
    i32 130, label %10
    i32 131, label %13
    i32 133, label %13
    i32 128, label %15
    i32 129, label %15
    i32 132, label %15
    i32 134, label %15
  ]

10:                                               ; preds = %4
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @vchiu_queue_push(i32* @khrn_queue, i32* %11)
  br label %17

13:                                               ; preds = %4, %4
  %14 = call i32 @vcos_event_signal(i32* @bulk_event)
  br label %17

15:                                               ; preds = %4, %4, %4, %4
  %16 = call i32 (...) @UNREACHABLE()
  br label %17

17:                                               ; preds = %15, %4, %13, %10
  %18 = load i32, i32* @VCHIQ_SUCCESS, align 4
  ret i32 %18
}

declare dso_local i32 @vchiu_queue_push(i32*, i32*) #1

declare dso_local i32 @vcos_event_signal(i32*) #1

declare dso_local i32 @UNREACHABLE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
